Index.html now using default.html in _layouts
Index.html now using default in _layouts

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: default
+title: prorelsim
+---
+<div class="blurb">
+	<h1>Promotion & Relegation For US Soccer.</h1>
+	<p>Promotion & Relegation <em>For</em> US Soccer. <a href="/about">Read more here...</a></p>
+</div><!-- /.blurb -->
