text dump, clean up in next commit
text dump, clean up in next commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,93 @@ layout: default
 title: prorelsim
 ---
 <div class="blurb">
-	<h1>Promotion & Relegation For US Soccer.</h1>
+	<h1>Promotion & Relegation Simulation For US Soccer.</h1>
 	
+This project aims to create a statistical model of a US soccer promotion and relegation pyramid structure.
+
+##### [](#header-5)Assumptions
+
+*   that soccer can be the number one sport in the US.
+*   that soccer could compete with other sports for talented players.
+	
+##### [](#header-5)Salary
+Salary data will be used from soccer clubs in Europe that are based in comparable sized cities and comparable income levels.
+
+##### [](#header-5)Clubs
+For example In London, UK, there are many clubs of differing size and income levels. A comparable city in the US would be New York or LA. So you would expect there to be a similar spread and distribution of clubs. Leyton Orient, Brentford, Crystal Palace, West Ham, Charlton, Tottenham, Chelsea, Arsenal.
+
+The starting resources of each soccer club will be based on population size and income levels of the city it is based in.
+
+Outliers like Villarreal in Spain(city of 40,000) who have consistently played in the Spanish top league can be modelled by adding committed long term wealth backers and a well managed club(scouting and hiring suitable managers and players).
+
+##### [](#header-5)Super Clubs 
+Super Club is defined as one whose revenue is in the top 10 in the world. For example Real Madrid,Barcelona,Bayern,Manchester United. How and where and if one or more US super clubs would develop. 
+
+##### [](#header-5)Bankruptcy/Insolvency
+This is a reality of promotion relegation systems and will be modelled. It will be assumed that this is down to mismanaged club resources and irresponsible management. Rather than the existence of relegation.
+
+##### [](#header-5)Transfer Market
+An active transfer market both internally within the US and externally with other clubs around the world. Players would move to clubs that can offer them higher salarys and/or more competitive league and/or chance of playing for the US national team.
+
+##### [](#header-5)High School/College/Pro League Route
+It is assumed that clubs will try to recruit players as early as they can. As such the traditional route to professional sports career will not be preferred. Players will be signed to a club professional at 18. Players will have some connection to a club at some level in the soccer piriymid by age 12 either by local junior teams or academy's.
+
+##### [](#header-5)League structure
+- semi-pro and amateur leagues organised on a regional basis.
+- one or more state wide professional leagues
+- one or more nation wide professional leagues
+
+##### [](#header-5)Travel Cost
+Vast distances involved would require subsidised travel. The soccer association that governs the soccer prymid would subsidise costs. Only a professional soccer could afford to travel across the US for a soccer match. Take for example LA based club playing a match against a New York based club. [Research flight costs.]
+
+##### [](#header-5)Travel Distance
+The impact on a players performance to fly say 5 hours from LA to New York would need to be taken into account. It would not make senses for amateur or semi pro teams to travel such distance. As such they would be organised into regional leagues. For professional leagues perhaps the fixture list could take into account distances and schedule long distance matches only after a certain number of short distance matches. But the nature of promotion relegation is that the teams in a league is determined by strength of team. For example you could have a situation where half the teams in the league are from the west coast while the other half are from the east coast.
+
+##### [](#header-5)Youth teams, Academy's
+Youth teams would play in local leagues based on a regional or state wide distribution. National youth leagues may not be feasible but one off youth tournaments where the nations best youth teams meet would be or already is a reality.
+
+##### [](#header-5)The dream
+One or more people or organisations invest/buy/setup in a soccer club. They hire, buy or build a stadium, training facility, administrative headquarters and a youth academy. They hire managers, coaches, physios as well as administrative staff for general day to day running and commercial activities. They build up a roster of players by using their financial resources to sign the best players they can. They enter the soccer prymid at the lowest level. Each season they improve their facilities, players & coaches. They gain promotion and with it higher commercial income, better chance of signing a higher calibre of player, more awareness about their club on a local, regional, state level.
+
+Developing your own players, investing in your scouting networks, hiring competent coaches and managers, managing your finances responsibly, signing and loaning good players, selling home grown players for a profit and being able to replace them.
+
+Each city or town will have at least one soccer team.
+
+America one of only 3 countries that don't use a promotion/relegation structure.
+
+Data
+- States
+- Counties
+- Cities=20
+- Population
+- Income
+
+##### [](#header-5)Statistical Model Of A Soccer Club
+
+Owners
+- company/s
+- individual/s
+- combination of above
+
+Staff
+- manager
+- coach/s
+- scouts
+- physio
+- other staff
+
+Income
+- cash injection from owner/bank
+- ticket sales
+- merchandise
+- player sales
+- league prize winnings=20
+
+Costs
+- loan repayments to owner/bank
+- player salaries
+- stadium costs
+- staff salaries
+
+
 </div><!-- /.blurb -->
